# treesize

./: Cargo.toml  tmp_ui_before.txt
crates/app/: Cargo.toml
crates/app/src/: main.rs  state.rs  ui.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: export.rs  human.rs  lib.rs  model.rs  progress.rs  scanner.rs  search.rs  treemap.rs
