[package]
name = "treesize-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
rayon = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
printpdf = "0.7"
thiserror = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
bytesize = "1"
fuzzy-matcher = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
num_cpus = "1"

[features]
cache = ["sled"]

[dependencies.sled]
version = "0.34"
optional = true
